// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  User
  Admin
}

enum subsidyStatus {
  Abolition
  Continuation
}


enum CustomFieldType {
  Number
  Date
  String
}

// お知らせ
model Information {
  id        Int      @id @default(autoincrement())
  title     String
  body      String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// ユーザー
model User {
  id             Int      @id @default(autoincrement())
  email          String   @unique
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  hashedPassword String
  answers        Answer[]
  role           Role     @default(User)
}

// 市町区村
model Municipality {
  id                  Int        @id @default(autoincrement())
  createdAt           DateTime   @default(now())
  updatedAt           DateTime   @updatedAt
  name                String     @unique
  municipalSymbolPath String
  isSupported         Boolean    @default(false)
  prefectureId        Int
  prefecture          Prefecture @relation(fields: [prefectureId], references: [id])
  subsidies           Subsidy[]
  housingSubsidyCondition HousingSubsidyCondition?
  childbirthSubsidyCondition ChildbirthSubsidyCondition?
}

// 都道府県
model Prefecture {
  id             Int            @id @default(autoincrement())
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt
  name           String         @unique
  municipalities Municipality[]
}

// 助成金
model Subsidy {
  id                      Int           @id @default(autoincrement())
  name                    String        @unique
  deadlineForReceipt      Int // 受給期限
  ageLimit                String // 年齢制限
  amountReceived          Int[] // 受給額
  applicationAddress      String // 申請先
  applicationMethod       String // 申請方法
  applicationRequirements String // 申請条件
  description             String // 説明
  status                  subsidyStatus @default(Continuation) // 助成金の更新・廃止などの状態
  municipalityId          Int
  createdAt               DateTime      @default(now())
  updatedAt               DateTime      @updatedAt
  questions               Question[]
  municipality            Municipality  @relation(fields: [municipalityId], references: [id])
  housingSubsidyCondition HousingSubsidyCondition?
  childbirthSubsidyCondition ChildbirthSubsidyCondition?
}

// 一問一答の質問
model Question {
  id         Int      @id @default(autoincrement())
  answerType String // YesとNoで答えられる質問か、数値など具体的な回答を要する質問なのか
  text       String // 質問文
  subsidyId  Int
  subsidy    Subsidy  @relation(fields: [subsidyId], references: [id])
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  Answer     Answer[]
}

// ユーザーの答えを保存するテーブル
model Answer {
  id         Int      @id @default(autoincrement())
  questionId Int
  question   Question @relation(fields: [questionId], references: [id])
  user       User     @relation(fields: [userId], references: [id])
  userId     Int
  createdAt  DateTime @default(now())
}

model HousingSubsidyCondition {
  municipalityId          Int @unique
  municipality            Municipality @relation(fields: [municipalityId], references: [id])
  subsidyId               Int @unique
  subsidy                 Subsidy @relation(fields: [subsidyId], references: [id])
  incomeThresholds        Int[] // 収入額
  financialAssetThresholds       Int[] // 金融資産の閾値
  maximumBenefitPayments  Int[] // 最大受給金額
  createdAt               DateTime @default(now())
  updatedAt               DateTime @updatedAt
  @@id([municipalityId, subsidyId])
}

model ChildbirthSubsidyCondition {
  municipalityId          Int @unique
  municipality            Municipality @relation(fields: [municipalityId], references: [id])
  subsidyId               Int @unique
  subsidy                 Subsidy @relation(fields: [subsidyId], references: [id])
  maximumBenefitPayments  Int[] // 最大受給金額
  isResidency             Boolean // 現在市町区村に住民票があるか
  isChildcareInterview    Boolean // 妊娠届出時に面談をしたか
  isPregnancyInterview    Boolean // 出産後面談をしたか
  @@id([municipalityId, subsidyId])
}